--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1> Welcome to Student Manager </h1>
+    <h3> School is an institution for enhancing human potentials </h3>
     
 </body>
 </html>
