--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1> Welcome to Student Manager </h1>
     <h3> School is an institution for enhancing human potentials </h3>
-    
+    <h4> We are happy to be developing this app for schools. It will run for free for the first two years for all the clients that will be using it</h4>
 </body>
 </html>
