Added the reason for the app

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1> Welcome to Student Manager </h1>
     <h3> School is an institution for enhancing human potentials </h3>
     <h4> We are happy to be developing this app for schools. It will run for free for the first two years for all the clients that will be using it. Conflicting updates</h4>
+    <h1> We are working on this code with the passion to provide enabling system for education within and outside nigeria</h1>
 </body>
 </html>
