--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h4> We are happy to be developing this app for schools. It will run for free for the first two years for all the clients that will be using it. Conflicting updates</h4>
     <h1> We are working on this code with the passion to provide enabling system for education within and outside nigeria</h1>
     <h3> Will this app be available for Indian schools? </h3>
+    <h3> yes! definitely. I know Indians love education for their fokes </h3>
 </body>
 </html>
